# esp32-smart-photo-frame

./: Cargo.toml  MIGRATION.md  README.md
client/: Cargo.toml
client/.cargo/: config.toml
client/src/: dev_config.rs  epd13in3.rs  epd_13in3e.rs  lib.rs  network.rs  run.rs
image_server/: .env.example  Cargo.toml
image_server/.cargo/: config.toml
image_server/src/: api_handlers.rs  esp_handler.rs  image_processing.rs  image_service.rs  immich.rs  main.rs
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: app_data.rs  image_ops.rs  immich.rs  main.rs
src/: epd_13in3e.rs  image_data.rs  lib.rs  wifi.rs
