[package]
name = "image_server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
image = "0.25.8"
poem = "3.1.12"
poem-openapi = "5.1.16"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
